--- a/pkp-lib/locale/en_US/grid.xml
+++ b/pkp-lib/locale/en_US/grid.xml
@@ -121,6 +121,11 @@
 	<message key="grid.action.addContributor">Add Contributor</message>
 	<message key="grid.action.editContributor">Edit Contributor</message>
 	<message key="grid.action.deleteContributor">Delete Contributor</message>
+	
+	<!-- Genres Grid -->
+	<message key="grid.genres.title">Genres</message>
+	<message key="grid.genres.description">These genres are used for file-naming purposes and are presented in a pull-down menu on uploading files. The genres designated ## allow the user to associate the file with either the whole book 99Z or a particular chapter by number (e.g., 02).</message>
+	
 
 	<!-- Review Forms Grid -->
 	<message key="grid.reviewForm.title">Review Forms</message>
@@ -187,6 +192,8 @@
 	<message key="grid.user.pleaseSelectUser">Please select a user</message>
 
 	<!-- Prepared emails -->
+	<message key="grid.preparedEmails.title">Prepared Email Templates</message>
+	<message key="grid.preparedEmails.description">The press facilitates work flow communication through the use of prepared email messages. The default wording of these email templates can be easily modified below.</message>
 	<message key="grid.preparedEmails.currentList">Current List</message>
 	
 	<!-- Plugins -->
