--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -78,6 +78,7 @@
 	<message key="common.closeWindow">Close Window</message>
 	<message key="common.complete">Complete</message>
 	<message key="common.completed">Completed</message>
+	<message key="common.confirm">Confirm</message>
 	<message key="common.content">Content</message>
 	<message key="common.continue">Continue</message>
 	<message key="common.copy">Copy</message>
