--- a/pkp-lib/locale/en_US/grid.xml
+++ b/pkp-lib/locale/en_US/grid.xml
@@ -21,6 +21,8 @@
 	<message key="grid.action.addUser">Add User</message>
 	<message key="grid.action.delete">Delete</message>
 	<message key="grid.action.deleteFile">Delete File</message>
+	<message key="grid.action.deleteMedia">Delete Media</message>
+	<message key="grid.action.editMedia">Edit Media</message>
 	<message key="grid.action.remove">Remove</message>
 	<message key="grid.action.edit">Edit</message>
 	<message key="grid.action.approve">Approve</message>
